@@ -1,5 +1,6 @@
 Revision history for Web::Components
 
+          - Model error now sets view to the default
           - Navigation now has content_class attribute
           - Splits out Menus class from Navigation class in JS
           - Changed event register method name in JS utils
